--- a/src/main/webapp/i18n/en/comment.json
+++ b/src/main/webapp/i18n/en/comment.json
@@ -27,7 +27,8 @@
         "button": "Comment",
         "question": "Your comment",
         "validate": "Validate",
-        "cancel": "Cancel"
+        "cancel": "Cancel",
+        "read": "Read"
       }
     }
   }
