--- a/src/main/webapp/i18n/fr/account.json
+++ b/src/main/webapp/i18n/fr/account.json
@@ -5,6 +5,10 @@
     "firstName": "Prénom : {{firstName}}",
     "email": "E-mail : {{email}}",
     "bookNumber": "Nombre de livres : {{number}}",
-    "introduction": "Présentation : {{introduction}}"
+    "introduction": "Présentation : {{introduction}}",
+    "book": {
+      "visibility": "Visibility :",
+      "delete": "Supprimer"
+    }
   }
 }
