--- a/src/main/webapp/i18n/fr/book.json
+++ b/src/main/webapp/i18n/fr/book.json
@@ -11,7 +11,7 @@
       "updated": "Le Livre avec l'identifiant {{ param }} a été mis à jour",
       "deleted": "Le Livre avec l'identifiant {{ param }} a été supprimé",
       "delete": {
-        "question": "Etes-vous certain de vouloir supprimer le Livre {{ id }}\u00A0?"
+        "question": "Etes-vous certain de vouloir supprimer le Livre \"{{ name }}\"\u00A0? (Irreversible)"
       },
       "detail": {
         "title": "Livre"
