--- a/src/main/webapp/i18n/fr/comment.json
+++ b/src/main/webapp/i18n/fr/comment.json
@@ -27,7 +27,8 @@
         "button": "Commenter",
         "question": "Votre commentaire",
         "validate": "Valider",
-        "cancel": "Fermer"
+        "cancel": "Fermer",
+        "read": "Lire"
       }
     }
   }
