--- a/src/main/webapp/i18n/fr/idea.json
+++ b/src/main/webapp/i18n/fr/idea.json
@@ -18,12 +18,7 @@
       },
       "type": "Type",
       "value": "Valeur",
-      "complement": "Compléments",
-      "validation": {
-        "required": "Un nombre d'idées est requis.",
-        "min": "Doit être plus grand que 0.",
-        "max": "Doit être plus petit que 13."
-      }
+      "complement": "Compléments"
     }
   }
 }
