--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -20,6 +20,7 @@
         "idea": "Idée",
         "wordAnalysis": "Analyse de mots",
         "comment": "Commentaire",
+        "bonus": "Bonus",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
