--- a/src/main/webapp/i18n/en/bonus.json
+++ b/src/main/webapp/i18n/en/bonus.json
@@ -11,7 +11,7 @@
       "updated": "A Bonus is updated with identifier {{ param }}",
       "deleted": "A Bonus is deleted with identifier {{ param }}",
       "delete": {
-        "question": "Are you sure you want to delete Bonus {{ id }}?"
+        "question": "Are you sure you want to delete the Bonus {{ id }}?"
       },
       "detail": {
         "title": "Bonus"
