Update bonus + navigation

--- a/src/main/webapp/i18n/en/bonus.json
+++ b/src/main/webapp/i18n/en/bonus.json
@@ -17,7 +17,8 @@
         "title": "Bonus"
       },
       "name": "Name",
-      "extension": "Extension"
+      "extension": "Extension",
+      "book": "Book"
     }
   }
 }
