Update download bonus

--- a/src/main/webapp/i18n/en/library.json
+++ b/src/main/webapp/i18n/en/library.json
@@ -26,6 +26,11 @@
     "author": "Author\u00A0: "
   },
   "image": {
+    "title": "Images for \"{{ entityName }}\"",
     "no_image": "No image for \"{{ entityName }}\""
+  },
+  "bonus": {
+    "title": "Bonuses for \"{{ entityName }}\"",
+    "no_bonus": "No bonus for \"{{ entityName }}\""
   }
 }
