--- a/src/main/webapp/i18n/en/library.json
+++ b/src/main/webapp/i18n/en/library.json
@@ -6,6 +6,7 @@
     "synopsis": "Synopsis",
     "summary": "Summary",
     "download": "Download",
+    "display": "Display",
     "bonus": "Bonus",
     "flip": "Click to read the summary",
     "downloading": "Ongoing",
