--- a/src/main/webapp/i18n/fr/library.json
+++ b/src/main/webapp/i18n/fr/library.json
@@ -6,6 +6,7 @@
     "synopsis": "Résumé",
     "summary": "Sommaire",
     "download": "Télécharger",
+    "display": "Voir",
     "bonus": "Bonus",
     "flip": "Cliquer pour lire le résumé",
     "downloading": "En cours",
