Open book / part / chapter / scene edition to public

--- a/src/main/webapp/i18n/en/account.json
+++ b/src/main/webapp/i18n/en/account.json
@@ -4,11 +4,6 @@
     "lastName": "Last name: {{lastName}}",
     "firstName": "First name: {{firstName}}",
     "email": "E-mail: {{email}}",
-    "bookNumber": "Number of books: {{number}}",
-    "introduction": "Introduction: {{introduction}}",
-    "book": {
-      "visibility": "Visibilité :",
-      "delete": "Delete"
-    }
+    "introduction": "Introduction: {{introduction}}"
   }
 }
