--- a/src/main/webapp/i18n/en/book.json
+++ b/src/main/webapp/i18n/en/book.json
@@ -20,7 +20,11 @@
       "author": "Author",
       "description": "Description",
       "part": "Part",
-      "cover": "Cover"
+      "cover": "Cover",
+      "visibility": "Visibility: ",
+      "required": {
+        "name": "Name field is required"
+      }
     }
   }
 }
