--- a/src/main/webapp/i18n/en/scene.json
+++ b/src/main/webapp/i18n/en/scene.json
@@ -18,6 +18,7 @@
       },
       "name": "Name",
       "number": "Number",
+      "numberAuto": "(if < 1, will be filled in automatically)",
       "text": "Text",
       "timestampStart": "Date / Time",
       "chapter": "Chapter",
