--- a/src/main/webapp/i18n/fr/book.json
+++ b/src/main/webapp/i18n/fr/book.json
@@ -20,7 +20,11 @@
       "author": "Auteur",
       "description": "Description",
       "part": "Partie",
-      "cover": "Couverture"
+      "cover": "Couverture",
+      "visibility": "Visibilité : ",
+      "required": {
+        "name": "Le champ Nom est requis"
+      }
     }
   }
 }
