--- a/src/main/webapp/i18n/fr/part.json
+++ b/src/main/webapp/i18n/fr/part.json
@@ -19,8 +19,14 @@
       "name": "Nom",
       "description": "Description",
       "number": "Numéro",
+      "numberAuto": "(si < 1, sera renseigné automatiquement)",
       "chapter": "Chapitre",
-      "book": "Livre"
+      "book": "Livre",
+      "required": {
+        "name": "Le champ Nom est requis",
+        "number": "Le champ Numéro est requis",
+        "book": "Le champ Livre est requis"
+      }
     }
   }
 }
