update time selector

--- a/src/main/webapp/i18n/en/book.json
+++ b/src/main/webapp/i18n/en/book.json
@@ -19,7 +19,7 @@
       "name": "Name",
       "author": "Author",
       "description": "Description",
-      "part": "Part",
+      "parts": "Parts",
       "cover": "Cover",
       "visibility": "Visibility: ",
       "required": {
