--- a/src/main/webapp/i18n/en/bonus.json
+++ b/src/main/webapp/i18n/en/bonus.json
@@ -17,8 +17,13 @@
         "title": "Bonus"
       },
       "name": "Name",
-      "extension": "Extension",
-      "book": "Book"
+      "file": "File",
+      "description": "Description",
+      "book": "Book",
+      "required": {
+        "name": "Field Name is required",
+        "book": "Field Book is required"
+      }
     }
   }
 }
