Bug fix on bonuses and covers

--- a/src/main/webapp/i18n/en/bonus.json
+++ b/src/main/webapp/i18n/en/bonus.json
@@ -19,6 +19,7 @@
       "name": "Name",
       "file": "File",
       "description": "Description",
+      "dataContentType": "Data Content Type",
       "book": "Book",
       "required": {
         "name": "Field Name is required",
