--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -12,11 +12,12 @@
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entités",
+        "main2": "Gestion",
         "book": "Livre",
         "part": "Partie",
         "chapter": "Chapitre",
         "scene": "Scène",
-        "cover": "Cover",
+        "cover": "Couverture",
         "idea": "Idée",
         "wordAnalysis": "Analyse de mots",
         "comment": "Commentaire",
