Add library (favorits + curent chapter)

--- a/src/main/webapp/i18n/en/bonus.json
+++ b/src/main/webapp/i18n/en/bonus.json
@@ -21,6 +21,7 @@
       "description": "Description",
       "dataContentType": "Data Content Type",
       "book": "Book",
+      "owner": "Owner",
       "required": {
         "name": "Field Name is required",
         "book": "Field Book is required"
