--- a/src/main/webapp/i18n/en/library.json
+++ b/src/main/webapp/i18n/en/library.json
@@ -1,37 +1,25 @@
 {
-  "library": {
-    "title": "Library",
-    "read": "Read",
-    "comments": "Comments",
-    "synopsis": "Synopsis",
-    "summary": "Summary",
-    "download": "Download",
-    "display": "Display",
-    "bonus": "Bonus",
-    "flip": "Click to read the summary",
-    "downloading": "Ongoing",
-    "export": {
-      "ongoing": "The export is in progress.\r\nPlease wait..."
-    },
-    "download_format": {
-      "title": "Select file format",
-      "question": "Select a file format for \"{{ entityName }}\"",
-      "validate": "Validate",
-      "cancel": "Cancel"
+  "nidAuxHistoiresApp": {
+    "library": {
+      "home": {
+        "title": "Libraries",
+        "createLabel": "Create a new Library",
+        "createOrEditLabel": "Create or edit a Library",
+        "notFound": "No Libraries found"
+      },
+      "created": "A new Library is created with identifier {{ param }}",
+      "updated": "A Library is updated with identifier {{ param }}",
+      "deleted": "A Library is deleted with identifier {{ param }}",
+      "delete": {
+        "question": "Are you sure you want to delete Library {{ id }}?"
+      },
+      "detail": {
+        "title": "Library"
+      },
+      "finished": "Finished",
+      "favorit": "Favorit",
+      "book": "Book",
+      "curentChapter": "Curent Chapter"
     }
-  },
-  "reader": {
-    "select_chapter": "Please select a chapter",
-    "previous": "Previous",
-    "next": "Next",
-    "author": "Author\u00A0: "
-  },
-  "cover": {
-    "title": "Covers for \"{{ entityName }}\"",
-    "no_cover": "No cover for \"{{ entityName }}\""
-  },
-  "bonus": {
-    "title": "Bonuses for \"{{ entityName }}\"",
-    "no_bonus": "No bonus for \"{{ entityName }}\""
   }
 }
