--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -4,7 +4,7 @@
     "browsehappy": "Vous utilisez un <strong>ancien</strong> navigateur. Veuillez <a href=\"http://browsehappy.com/?locale=fr\">mettre à jour votre navigateur</a> pour une meilleure expérience.",
     "menu": {
       "home": "Accueil",
-      "library": "Librairie",
+      "library": "Bibliothèque",
       "authors": "Auteurs",
       "tools": "Outils",
       "covers": "Covers",
@@ -22,6 +22,7 @@
         "wordAnalysis": "Analyse de mots",
         "comment": "Commentaire",
         "bonus": "Bonus",
+        "library": "Bibliothèque",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
