--- a/src/main/webapp/i18n/fr/library.json
+++ b/src/main/webapp/i18n/fr/library.json
@@ -1,37 +1,25 @@
 {
-  "library": {
-    "title": "Bibliothèque",
-    "read": "Lire",
-    "comments": "Commentaires",
-    "synopsis": "Résumé",
-    "summary": "Sommaire",
-    "download": "Télécharger",
-    "display": "Voir",
-    "bonus": "Bonus",
-    "flip": "Cliquer pour lire le résumé",
-    "downloading": "En cours",
-    "export": {
-      "ongoing": "L'export est en cours.\r\nVeuillez patienter..."
-    },
-    "download_format": {
-      "title": "Sélectionnez un format de fichier",
-      "question": "Select un format de fichier pour \"{{ entityName }}\"",
-      "validate": "Valider",
-      "cancel": "Fermer"
+  "nidAuxHistoiresApp": {
+    "library": {
+      "home": {
+        "title": "Bibliothèques",
+        "createLabel": "Créer une nouvelle Bibliothèque",
+        "createOrEditLabel": "Créer ou éditer une Bibliothèque",
+        "notFound": "Aucune Bibliothèque trouvée"
+      },
+      "created": "Une nouvelle Bibliothèque a été créé avec l'identifiant {{ param }}",
+      "updated": "La Bibliothèque avec l'identifiant {{ param }} a été mise à jour",
+      "deleted": "La Bibliothèque avec l'identifiant {{ param }} a été supprimée",
+      "delete": {
+        "question": "Etes-vous certain de vouloir supprimer la Bibliothèque {{ id }} ?"
+      },
+      "detail": {
+        "title": "Bibliothèque"
+      },
+      "finished": "Finis",
+      "favorit": "Favorit",
+      "book": "Livre",
+      "curentChapter": "Chapitre en cours"
     }
-  },
-  "reader": {
-    "select_chapter": "Veuillez sélectionner un chapitre",
-    "previous": "Précédent",
-    "next": "Suivant",
-    "author": "Auteur\u00A0: "
-  },
-  "cover": {
-    "title": "Couvertures pour \"{{ entityName }}\"",
-    "no_cover": "Pas de couverture pour \"{{ entityName }}\""
-  },
-  "bonus": {
-    "title": "Bonus pour \"{{ entityName }}\"",
-    "no_bonus": "Pas de bonus pour \"{{ entityName }}\""
   }
 }
