Update library -> bookStatus name

--- a/src/main/webapp/i18n/en/reader.json
+++ b/src/main/webapp/i18n/en/reader.json
@@ -8,6 +8,11 @@
     "download": "Download",
     "display": "Display",
     "bonus": "Bonus",
+    "favorits": {
+      "title": "Favorits",
+      "add": "Add to favorits",
+      "remove": "Remove from favorits"
+    },
     "flip": "Click to read the summary",
     "downloading": "Ongoing",
     "export": {
