--- a/src/main/webapp/i18n/fr/reader.json
+++ b/src/main/webapp/i18n/fr/reader.json
@@ -8,6 +8,11 @@
     "download": "Télécharger",
     "display": "Voir",
     "bonus": "Bonus",
+    "favorits": {
+      "title": "Favorits",
+      "add": "Ajouter aux favorits",
+      "remove": "Supprimer des favorits"
+    },
     "flip": "Cliquer pour lire le résumé",
     "downloading": "En cours",
     "export": {
