Add button favorits + clean SecurityConfig calls

--- a/src/main/webapp/i18n/fr/reader.json
+++ b/src/main/webapp/i18n/fr/reader.json
@@ -11,7 +11,7 @@
     "favorits": {
       "title": "Favorits",
       "add": "Ajouter aux favorits",
-      "remove": "Supprimer des favorits"
+      "remove": "Retirer des favorits"
     },
     "flip": "Cliquer pour lire le résumé",
     "downloading": "En cours",
