--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -9,6 +9,8 @@
       "tools": "Tools",
       "covers": "Covers",
       "book": "Book",
+      "books": "Books",
+      "favorits": "Favorits",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entities",
