--- a/src/main/webapp/i18n/fr/global.json
+++ b/src/main/webapp/i18n/fr/global.json
@@ -9,6 +9,8 @@
       "tools": "Outils",
       "covers": "Covers",
       "book": "Livre",
+      "books": "Livres",
+      "favorits": "Favorits",
       "jhipster-needle-menu-add-element": "JHipster will add additional menu entries here (do not translate!)",
       "entities": {
         "main": "Entités",
