Update comments : no comments display

--- a/src/main/webapp/i18n/en/comment.json
+++ b/src/main/webapp/i18n/en/comment.json
@@ -29,7 +29,8 @@
         "validate": "Validate",
         "cancel": "Cancel",
         "read": "Read"
-      }
+      },
+      "empty": "No comments for this book"
     }
   }
 }
