--- a/src/main/webapp/i18n/fr/comment.json
+++ b/src/main/webapp/i18n/fr/comment.json
@@ -29,7 +29,8 @@
         "validate": "Valider",
         "cancel": "Fermer",
         "read": "Lire"
-      }
+      },
+      "empty": "Pas de commentaires pour ce livre"
     }
   }
 }
