Update creature generator

--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -24,6 +24,7 @@
         "wordAnalysis": "Word Analysis",
         "comment": "Comment",
         "bonus": "Bonus",
+        "bookStatus": "Book Status",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
