--- a/src/main/webapp/i18n/en/global.json
+++ b/src/main/webapp/i18n/en/global.json
@@ -69,6 +69,9 @@
         "register": {
           "noaccount": "You don't have an account yet?",
           "link": "Register a new account"
+        },
+        "authenticated": {
+          "link": "log in"
         }
       },
       "error": {
