--- a/src/main/webapp/i18n/en/legal-notice.json
+++ b/src/main/webapp/i18n/en/legal-notice.json
@@ -3,7 +3,7 @@
     "title": "Legal notice",
     "cookies": {
       "title": "Use of cookies / personal data",
-      "body": "This site does not use cookies or personal data, apart from your E-Mail to activate your account. As a result, navigation within the site may be a little less fluid than your other online reading experiences (no favorites, bookmarks, etc.)"
+      "body": "This site does not use cookies or personal data, apart from your E-Mail to activate your account. As a result, navigation within the site may be a little less fluid than your other online reading experiences (example : there is no bookmarks)"
     },
     "download": {
       "title": "Legal download",
