--- a/src/main/webapp/i18n/fr/bookStatus.json
+++ b/src/main/webapp/i18n/fr/bookStatus.json
@@ -17,7 +17,7 @@
         "title": "Status de livre"
       },
       "finished": "Finis",
-      "favorit": "Favorit",
+      "favorit": "Favori",
       "book": "Livre",
       "curentChapter": "Chapitre en cours"
     }
