--- a/src/main/webapp/i18n/fr/help.json
+++ b/src/main/webapp/i18n/fr/help.json
@@ -10,7 +10,7 @@
       "body": "Vous pouvez télécharger l'œuvre de votre choix au format PDF ou EPUB en cliquant sur l'icone de téléchargement placée sous chaque œuvre."
     },
     "B_Reading": {
-      "title": "Service de Bete Lecture",
+      "title": "Service de Bêta Lecture",
       "body": "Nous proposons un service de Bêta-Lecture rémunéré à toute personne qui le souhaite. Pour plus d'informations, contactez-nous sur le <a style=\"color: blue\" href=\"{{discordUrl}}\">Discord</a> de la communauté, dans la section dédiée à la Bêta-Lecture."
     },
     "generators": {
