--- a/src/main/webapp/i18n/fr/legal-notice.json
+++ b/src/main/webapp/i18n/fr/legal-notice.json
@@ -3,7 +3,7 @@
     "title": "Mentions Légales",
     "cookies": {
       "title": "Utilisation des cookies / données personnelles",
-      "body": "Ce site n'utilise ni cookies ni données personnelles, mis à part votre E-Mail pour activer votre compte. Par conséquent, la navigation au sein du site sera peut-être un peu moins fluide que vos autres experiences de lecture en ligne (pas de favorits, marque-pages, etc)"
+      "body": "Ce site n'utilise ni cookies ni données personnelles, mis à part votre E-Mail pour activer votre compte. Par conséquent, la navigation au sein du site sera peut-être un peu moins fluide que vos autres experiences de lecture en ligne (pas de marque-pages par exemple)"
     },
     "download": {
       "title": "Téléchargement légal",
